--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ subjects:
 - !lcsh 'Children''s periodicals, American'
 - !lcsh 'Children''s literature -- Periodicals'
 - !lcc 'PZ'
+- GITenberg
 title: St. Nicholas, Vol. 5, No. 2, December, 1877
 url: http://www.gutenberg.org/ebooks/15373
